--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,7 @@
+<!-- development version, includes helpful console warnings -->
+<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+
+
 <script>
 const MAX_IMAGE_SIZE = 10000000
 
