--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,6 @@
-<!-- development version, includes helpful console warnings -->
+
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 
 
