--- a/src/index.html
+++ b/src/index.html
@@ -29,10 +29,10 @@ new Vue({
       reader.onload = (e) => {
         console.log('length: ', e.target.result.includes('data:image/jpeg'))
         if (!e.target.result.includes('data:image/jpeg')) {
-          return alert('Wrong file type - JPG only.')
+        //  return alert('Wrong file type - JPG only.')
         }
         if (e.target.result.length > MAX_IMAGE_SIZE) {
-          return alert('Image is loo large - 1Mb maximum')
+         // return alert('Image is loo large - 1Mb maximum')
         }
         this.image = e.target.result
       }
