--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,7 @@ img {
 
 
 <div id="app">
-    <h1>S3 Uploader Test - Questions? Ask James @jbesw</h1>
+    <h1>MDL Class Video Publisher</h1>
 
     <div v-if="!image">
       <h2>Select an image</h2>
