--- a/src/index.html
+++ b/src/index.html
@@ -122,7 +122,7 @@ img {
     <h1>MDL Class Video Publisher</h1>
 
     <div v-if="!image">
-      <h2>Select an image</h2>
+      <h2>Select Class Video</h2>
       <input type="file" @change="onFileChange">
     </div>
     <div v-else>
