--- a/src/index.html
+++ b/src/index.html
@@ -127,8 +127,8 @@ img {
     </div>
     <div v-else>
       <img :src="image" />
-      <button v-if="!uploadURL" @click="removeImage">Remove image</button>
-      <button v-if="!uploadURL" @click="uploadImage">Upload image</button>
+      <button v-if="!uploadURL" @click="removeImage">Remove video</button>
+      <button v-if="!uploadURL" @click="uploadImage">Upload video</button>
     </div>
     <h2 v-if="uploadURL">Success! Image uploaded to bucket.</h2>
 </div>
