--- a/src/index.html
+++ b/src/index.html
@@ -130,6 +130,6 @@ img {
       <button v-if="!uploadURL" @click="removeImage">Remove video</button>
       <button v-if="!uploadURL" @click="uploadImage">Upload video</button>
     </div>
-    <h2 v-if="uploadURL">Success! Video uploaded to bucket.</h2>
+    <h2 v-if="uploadURL">Success! Video uploaded.</h2>
 </div>
 
